finished styling all but the services page and forms. need to hook up email functionality

--- a/asbestosAbatement.html
+++ b/asbestosAbatement.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
+        <link rel="stylesheet" href="asbestosAbatement.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -25,6 +26,7 @@
         <main>
             <h1>Asbestos Abatement and Removal Services</h1>
             <h2>You Need the Right Abatement Contractor</h2>
+            <div class="lines"></div>
             <!-- <span>this is for the line</span> -->
             <p>
                 The potential health risks associated with asbestos makes contractor selection extremely important.
@@ -34,6 +36,7 @@
                 You can be certain that our vast asbestos abatement experience will provide the utmost in safety as well as compliance with all applicable state, local, and federal regulations.
             </p>
             <h2>EPA And OSHA Licensing / Certification</h2>
+            <div class="lines"></div>
             <p>
                 To ensure job site safety and project efficiency, our workforce has completed all EPA and OSHA training courses required for certification and/or licensing to work with asbestos, lead, mold, and other hazardous materials along with general safety courses.
                 <br><br>
@@ -42,28 +45,36 @@
                 As you can see, the Intercon team is fully equipped to ensure safety during every step of the asbestos removal process.
             </p>
             <h2>Our Techniques and Processes</h2>
-            <ul>
-                <li>Schools and Universities (both Public and Private)</li>
-                <li>
-                    Multi-family Housing Apartment Buildings</li>
-                <li>Commercial Office Buildings</li>
-                <li>Government Buildings</li>
-                <li>Manufacturing Plants</li>
-                <li>Military Buildings</li>
-                <li>Industrial Plants</li>
-                <li>Power Plants</li>
-                <li>Retail Stores</li>
-                <li>Hospitals</li>
-                <li>Airports</li>
-            </ul>
+            <div class="lines"></div>
+            <br>
+            <div>
+                <ul>
+                    <li>Schools and Universities (both Public and Private)</li>
+                    <li>
+                        Multi-family Housing Apartment Buildings</li>
+                    <li>Commercial Office Buildings</li>
+                    <li>Government Buildings</li>
+                    <li>Manufacturing Plants</li>
+                    <li>Military Buildings</li>
+                    <li>Industrial Plants</li>
+                    <li>Power Plants</li>
+                    <li>Retail Stores</li>
+                    <li>Hospitals</li>
+                    <li>Airports</li>
+                </ul>
+                <img src="./imgs/services-imgs/Texas_seal_blk.png"/>
+            </div>
+            <br>
             <p>The techniques utilized by our asbestos abatement team are optimized for each specific space.</p>
             <h2>Environmentally Friendly And Interruption Free Disposal</h2>
+            <div class="lines"></div>
             <p>
                 In many cases, asbestos abatement and removal services must be performed in one portion of a building while the other portions remain occupied and continue to operate.
                 <br><br>
                 We understand how important continued productivity is and we have the experience and technical expertise to remove the asbestos-containing materials without interrupting your day-to-day operations, when possible.
             </p>
             <h2>The Bottom Line</h2>
+            <div class="lines"></div>
             <p>
                 Our certifications, extensive experience, and professional techniques in asbestos removal and disposal enable us to provide you with a stable, reliable, and trustworthy team of Project Managers, Supervisors, and Laborers, all of whom have ability develop a work plan that is specific to your specific project.
                 <br><br>
