--- a/asbestosWasteTransport.html
+++ b/asbestosWasteTransport.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
+        <link rel="stylesheet" href="asbestosWasteTransport.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -25,10 +26,12 @@
         <main>
             <h1>Asbestos Waste Transport & Disposal</h1>
             <h2>The Problem</h2>
+            <div class="lines"></div>
             <p>
                 Removing the asbestos-containing material is only half the problem, the other half is ensuring that the waste is transported and disposed properly and safely.
             </p>
             <h2>Our Services</h2>
+            <div class="lines"></div>
             <p>
                 Intercon has the flexibility and know-how to complete asbestos waste hauling and disposal projects of any size and any complexity.
                 <br><br>
@@ -36,6 +39,7 @@
                 Manifests complete with information about waste streams, approval codes, and disposal locations.
             </p>
             <h2>Our Fleet/Equipment</h2>
+            <div class="lines"></div>
             <p>
                 Our extensive fleet of transport and disposal equipment includes:
                 <br>
@@ -47,6 +51,7 @@
                 </ul>
             </p>
             <h2>Contact Us</h2>
+            <div class="lines"></div>
             <p>
                 <a href="contact.html">Contact</a> Intercon Environmental, Inc. today for all of your Asbestos Transportation and Disposal needs.
             </p>
