--- a/certifications.html
+++ b/certifications.html
@@ -25,26 +25,30 @@
         </header>
         <main>
             <h1>Our Licenses & Certifications</h1>
+            <div class="lines"></div>
             <p>
                 When choosing an Asbestos Abatement, Demolition, or Mold Remediation contractor it is critical that your contractor be fully licensed and certified.
                 <br><br>
                 Intercon Environmental, Inc. is proud to hold the following Texas Department of State Health Services (TDSHS) licenses:
                 <br><br>
-                <ul>
-                    <li>Asbestos Abatement Contractor - License Number 800805</li>
-                    <li>Asbestos Transporter - License Number 400336</li>
-                    <li>Mold Remediation Company – License Number RCO0139</li>
-                </ul>
-                <br><br>
-                Additionally, intercon is certifiedby the following organizations:
-                <br><br>
-                <ul>
-                    <li>State of Texas Historically Underutilized Business (HUB) Program</li>
-                    <li>North Central Texas Regional Certification Agency (NCTRCA)</li>
-                    <li>South Central Texas Regional Certification Agency (SCTRCA); as SBE WBE</li>
-                </ul>
             </p>
+            <ul>
+                <li>Asbestos Abatement Contractor - License Number 800805</li>
+                <li>Asbestos Transporter - License Number 400336</li>
+                <li>Mold Remediation Company – License Number RCO0139</li>
+            </ul>
+            <p>
+                <br><br>
+                Additionally, intercon is certified by the following organizations:
+                <br><br>
+            </p>
+            <ul>
+                <li>State of Texas Historically Underutilized Business (HUB) Program</li>
+                <li>North Central Texas Regional Certification Agency (NCTRCA)</li>
+                <li>South Central Texas Regional Certification Agency (SCTRCA); as SBE WBE</li>
+            </ul>
             <h2>Insurance Coverage Amounts</h2>
+            <div class="lines"></div>
             <div><p>General Liability</p><p>$1,000,000/$2,000,000</p></div>
             <div><p>Pollution Liability</p><p>$1,000,000/$2,000,000</p></div>
             <div><p>Worker's Compensation</p><p>$1,000,000</p></div>
