--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <p>
                 Thank you for your interest in Intercon Environmental, Inc. We look forward to the opportunity of working with you. Please complete the form below and one of our estimators will contact you.
             </p>
-            <form>
+            <form method="post">
                 <!-- form needs to have an action -->
                 <label for="firstName">First name:</label>
                 <input type="text" id="firstName" name="firstName" value="" >
