--- a/demolitionServices.html
+++ b/demolitionServices.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
+        <link rel="stylesheet" href="demolitionServices.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -25,16 +26,18 @@
         <main>
             <h1>Demolition Services</h1>
             <h2>More Than An Ordinary Demolition Contractor</h2>
+            <div class="lines"></div>
             <p>
                 At Intercon Environmental, Inc., our professional approach and extensive industry knowledge make us the leader in commercial demolition.
                 <br><br>
                 We have the expertise, team, and equipment in-house to meet your demolition needs.
             </p>
             <h2>Our Services</h2>
+            <div class="lines"></div>
             <p>
                 Intercon is uniquely qualified to offer you a wide range of demolition services, including:
             </p>
-            <ul>
+            <ul class="first-tier-list">
                 <li>
                     Heavy Demolition:
                     <ul>
@@ -63,13 +66,14 @@
                 </li>
             </ul>
             <p>We can also acquire and manage all required permits and documentation including:</p>
-            <ul>
+            <ul class="first-tier-list">
                 <li>Texas Department of State Health Services notification</li>
                 <li>Demolition permits from all jurisdictional entities</li>
                 <li>Utility provider location notifications</li>
                 <li>Project closeout documents</li>
             </ul>
             <h2>What Makes Us the Demolition Leader?</h2>
+            <div class="lines"></div>
             <p>
                 First, our extremely skilled demolition team and knowledgeable staff.
                 <br><br>
@@ -79,7 +83,7 @@
                 <br><br>
                 Our demolition equipment is late model, up-to-date, and specially equipped to handle a variety of projects. Our extensive fleet includes:
             </p>
-            <ul>
+            <ul class="first-tier-list">
                 <li>Excavators, track loaders, and skid steer loaders, to name a few</li>
                 <li>40-cubic yard open-top roll-off containers</li>
                 <li>40-cubic yard enclosed-top roll-off containers</li>
@@ -91,6 +95,7 @@
                 This combination of a highly skilled staff, and our own demolition equipment allows us to provide most, if not all services in-house.
             </p>
             <h2>Contact Us</h2>
+            <div class="lines"></div>
             <p>
                 <a href="contact.html">Contact </a>Intercon Environmental, Inc. today for all of your commercial demolition needs.
             </p>
