--- a/moldRemediation.html
+++ b/moldRemediation.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Intercon Environmental</title>
         <link rel="stylesheet" href="header-footer.css">
+        <link rel="stylesheet" href="moldRemediation.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -25,6 +26,7 @@
         <main>
             <h1>Mold Remediation</h1>
             <h2>The Problem</h2>
+            <div class="lines"></div>
             <p>
                 The health, safety, and liability issues associated with mold have become one of today’s biggest environmental concerns.
                 <br><br>
@@ -32,6 +34,7 @@
                 greatly increased awareness by those affected, and greatly increased liability for those responsible.
             </p>
             <h2>The Solution</h2>
+            <div class="lines"></div>
             <p>
                 At Intercon Environmental, Inc. we understand all of these issues, and can help by providing safe, effective, and efficient solutions.
                 <br><br>
@@ -39,11 +42,12 @@
                 techniques that comply with all state regulations and guidelines.
             </p>
             <h2>Our Services</h2>
+            <div class="lines"></div>
             <p>
                 First and foremost, the moisture source must be identified and eliminated. The existing source of active mold growth is then removed along with any suspect porous materials. Next all non-porous materials are thoroughly cleaned and sanitized.
                 <br><br>
                 We Perform Mold Remediation for:
-                <ul>
+                <ul class="first-tier-list">
                     <li>Commercial buildings</li>
                     <li>Industrial complexes</li>
                     <li>Schools</li>
@@ -54,6 +58,7 @@
                 Our accurate record keeping, strict adherence to protocols, and highly skilled technicians are just a few of the reasons Intercon Environmental, Inc. is the best choice for your mold remediation project.
             </p>
             <h2>Contact Us</h2>
+            <div class="lines"></div>
             <p>
                 <a href="contact.html">Contact</a> Intercon Environmental, Inc. today for all of your Mold Remediation needs.
             </p>
