--- a/services.html
+++ b/services.html
@@ -28,7 +28,8 @@
             <h1>Services</h1>
             <div class="services">
                 <div class="service-box">
-                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <!-- <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div> -->
+                    <img class="service-img" src="./imgs/services-imgs/bulldozer.png"/>
                     <h2>Asbestos Abatement</h2>
                     <p>
                         Intercon Environmental, Inc. is a leader in the asbestos abatement industry. The techniques utilized by our asbestos abatement personnel are optimized for each specific project.
@@ -36,7 +37,8 @@
                     <a href="asbestosAbatement.html">Read More >></a>
                 </div>
                 <div class="service-box">
-                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <!-- <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div> -->
+                    <img class="service-img" src="./imgs/services-imgs/digger.png"/>
                     <h2>Demolition Services</h2>
                     <p>
                         Intercon Environmental, Inc. is more than just a demolition contractor. As an environmental contractor, we recycle demolition waste whenever practical to reduce the impact on landfills.
@@ -44,7 +46,8 @@
                     <a href="demolitionServices.html">Read More >></a>
                 </div>
                 <div class="service-box">
-                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <!-- <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div> -->
+                    <img class="service-img" src="./imgs/services-imgs/no-germ.png"/>
                     <h2>Mold Remediation</h2>
                     <p>
                         Health, safety and liability issues associated with mold are some of today's more sensitive environmental concerns. At Intercon Environmental we understand this and provide solutions.
@@ -52,7 +55,8 @@
                     <a href="moldRemediation.html">Read More >></a>
                 </div>
                 <div class="service-box">
-                    <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div>
+                    <!-- <div class="picture-placeholder" style="height: 300px; width: 300px; background-color: black;"></div> -->
+                    <img class="service-img" src="./imgs/services-imgs/wastetransport.png"/>
                     <h2>Asbestos Waste Transport</h2>
                     <p>
                         Smart Solutions Transport, our Asbestos Waste Transportation Division, gives Intercon the capability to provide in-house trucking for asbestos debris removal and disposal.
