--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
     <body>
         <header>
@@ -26,6 +25,7 @@
         </header>
         <main>
             <h1>Contact Information</h1>
+            <div class="lines"></div>
             <p>
                 Thank you for your interest in Intercon Environmental, Inc. We look forward to the opportunity of working with you. Please complete the form below and one of our estimators will contact you.
             </p>
@@ -48,7 +48,7 @@
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
-
+                <div class="lines"></div>
                 <h2>Interested In:</h2><br>
                     <input type="checkbox" id="asbestosAbatement" name="asbestosAbatement" value="Asbestos Abatement" >
                     
@@ -65,6 +65,7 @@
                     <input type="checkbox" id="selectiveDemolition" name="selectiveDemolition" value="Selective Demolition" >
                     
                     <label for="selectiveDemolition">Selective Demolition</label>
+                    <div class="lines"></div>
                 <h2>How Did You Hear About us?</h2><br>
                     <input type="radio" id="referral" name="referral" value="Referral" >
 
@@ -81,12 +82,11 @@
                     <input type="radio" id="other" name="other" value="Other" >
 
                     <label for="other">Other</label>
+                    <br><br>
                 <label>Comments:</label>
                 <input type="text" id="comments" name="comments" value="" >
 
                 <div class="h-captcha" data-captcha="true" required></div>
-
-                <div class="g-recaptcha" data-sitekey="6LemOecpAAAAAB-E1XZvVJmCWEAn0DAYMlFeYqkn"></div>
 
                 <button type="submit">Submit Form</button>
                 <input type="hidden" name="access_key" value="23a92574-3d4b-4b12-99a0-130b7489612f">
