cleaned up application. trying to fix captcha

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 
                 <div class="h-captcha" data-captcha="true" required></div>
 
-                <button type="submit">Submit Form</button>
+                <input type="submit" value="Submit">
                 <input type="hidden" name="access_key" value="23a92574-3d4b-4b12-99a0-130b7489612f">
 
             </form>
